--- a/bower.json
+++ b/bower.json
@@ -15,14 +15,14 @@
     "tests"
   ],
   "dependencies": {
-    "purescript-halogen": "^4.0.0",
-    "purescript-halogen-renderless": "^0.0.3",
+    "purescript-halogen": "master",
+    "purescript-halogen-renderless": "halogen-v5.0.0",
     "purescript-polyform": "^0.7.0",
     "purescript-validation": "^4.0.0"
   },
   "devDependencies": {
-    "purescript-ocelot": "git@github.com:citizennet/purescript-ocelot.git#v0.5.0",
-    "purescript-halogen-storybook": "^0.4.0",
+    "purescript-ocelot": "git@github.com:citizennet/purescript-ocelot.git#halogen-v5.0.0",
+    "purescript-halogen-storybook": "git@github.com:thomashoneyman/purescript-halogen-storybook.git#master",
     "purescript-debug": "^4.0.0",
     "purescript-test-unit": "^14.0.0",
     "purescript-read": "^1.0.1"
